--- a/src/common/sass/reset.scss
+++ b/src/common/sass/reset.scss
@@ -66,6 +66,13 @@ td
     padding: 0;
 }
 
+html,
+body {
+    height: 100%;
+    width: 100%;
+    overflow-x: hidden;
+}
+
 
 /**
  * 非大面积文字排版网站通常不需要列表项，如果需要可单独设置
